# claim_AI

./: .gitignore  AI Car Insurance HLD.md  README.md  claims.db  package-lock.json  package.json  run.bat  test_toon.py
app/: main.py
app/controller/: claim_controller.py
app/model/: claim.py
app/service/: ai_service.py  file_service.py  policy_service.py
backend/: main.py  pyproject.toml
backend/controller/: claim_controller.py
backend/db/: database.py
backend/model/: claim.py
backend/service/: ai_service.py  image_detection_service.py  imagekit_service.py  toon_service.py
docs/: AI Image Analysis - Technical Guide.md  AI-Assisted Car Insurance Claim Proces.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: claimApi.ts
frontend/src/components/: AIResultCard.tsx  DamageLocationVisual.tsx  FileUpload.tsx  Navbar.tsx  StatusBadge.tsx
frontend/src/pages/: CustomerPortal.tsx  ProviderDashboard.tsx
frontend/src/types/: claim.types.ts
