[project]
name = "claim-ai"
version = "2026.5.1"
description = "AI-assisted Car Insurance Claim Portal"
requires-python = ">=3.13"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "pymupdf>=1.24.0",
    "openai>=1.50.0",
    "python-multipart>=0.0.12",
    "python-dotenv>=1.0.0",
    "toon-format>=0.1.0",
    "psycopg2-binary>=2.9.12",
    "pydantic[email]>=2.13.4",
    "requests>=2.34.2",
    "imagekitio>=5.5.2",
    "httpx[http2]>=0.28.1",
    "langchain>=1.3.2",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
